--- a/index.html
+++ b/index.html
@@ -21,13 +21,36 @@
 
         <div class="details">
             <strong>Researcher Information:</strong><br>
-            Name: Karan Kurani]<br>
+            Name: Karan Kurani<br>
             Contact Email: <span class="email">Karankurani3k@gmail.com</span><br>
             Date of Discovery: February 17, 2026
         </div>
 
         <p style="margin-top: 30px; font-size: 0.9em; color: #666;">
             <em>Note: No user data is being collected. This redirect will be removed once the report is acknowledged.</em>
+#🔹 1️⃣ capstone.iacs.seas.harvard.edu
+
+CNAME → www83.wixdns.net
+
+Shows: Wix “ConnectYourDomain” page
+
+🔹 2️⃣ reads-lab.gse.harvard.edu
+
+CNAME → www.readslab.org → cdn1.wixdns.net
+
+Shows: Wix error page
+
+🔹 3️⃣ report2017.hsci.harvard.edu
+
+CNAME → www40.wixdns.net
+
+Shows: Wix error page
+
+🔹 4️⃣ cdn2.sph.harvard.edu
+
+CNAME → edge.redirect.pizza
+
+Shows: redirect.pizza 404 “Unable to redirect”
         </p>
     </div>
 </body>
